[package]
name = "gameplay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
once_cell = "*"
engine-api = { path = "../engine-api"}
glam = "0.22.0"
tokio = { version = "1.25.0", features = ["full"] }
serde_json = "1.0"
serde = {version="1.0",features = ["derive"]}
serde_derive = "1.0.135"

[lib]
crate-type = ["cdylib"]   
name="gameplay"